--- a/zippy-droid/src/main/AndroidManifest.xml
+++ b/zippy-droid/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
-    android:largeHeap="true">
-        <activity android:name=".ZippyActivity">
+            android:largeHeap="true">
+        <activity android:name=".ZippyActivity"
+                  android:screenOrientation="portrait">
         </activity>
     </application>
 
