--- a/zippy-droid/build.gradle
+++ b/zippy-droid/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.exifinterface:exifinterface:1.0.0'
 }
