--- a/zippy-droid/build.gradle
+++ b/zippy-droid/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
+
+    implementation 'com.google.dagger:dagger-android:2.22.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
 }
