Add navigator, use databinding

--- a/zippy-droid/build.gradle
+++ b/zippy-droid/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -19,10 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    dataBinding.enabled = true
 }
 
 dependencies {
+    def nav_version = "2.1.0-alpha02"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // network
@@ -40,6 +43,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
 
-    implementation 'com.google.dagger:dagger-android:2.22.1'
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
+
+    kapt 'com.android.databinding:compiler:3.0.1'
 }
